--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 @font-face {
     font-family: mainFont;
     src: url(BebasNeue-Regular.ttf);
-  }
+}
 
 * {
     font-family: mainFont;
 }
 
 body {
-    background-color: rgb(71, 71, 71);
+    background-color: rgb(29, 29, 29);
 }
 
 mainContainer {
@@ -28,31 +28,128 @@ h1 {
 }
 
 .top {
-    display:inline-flex;
+    display: inline-flex;
     height: 115px;
 }
 
 .squares {
-    display:inline-flex;
+    display: inline-flex;
     justify-content: end;
     margin-top: 7px;
 }
 
 .sqr1 {
     margin-left: 90px;
+    animation-name: sqranim1b;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
 }
 
 .sqr1, .sqr2, .sqr3, .sqr4, .sqr5 {
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(20, 13, 13);
     width: 67px;
     height: 67px;
     margin-right: 90px;
     margin-top: 5px;
+    border-radius: 5px;
     transform: skew(-20deg);
+    justify-content: center;
 }
 
+p {
+    background: linear-gradient(49deg, rgb(0, 255, 234) 27%, rgb(0, 255, 157) 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 20px;
+    text-align: center;
+    text-shadow: 0px 0px 4px #ffffff;
+    margin-top: 22px;
+}
+
+/* square animations */
+
+.sqr1 {
+    animation-name: sqranim1b;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
+}
+
+.sqr2 {
+    animation-name: sqranim1b;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
+}
+
+.sqr3 {
+    animation-name: sqranim1b;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
+}
+
+.sqr4 {
+    animation-name: sqranim1b;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
+}
+
+.sqr5 {
+    animation-name: sqranim1b;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
+}
+
+.sqr1:hover {
+    animation-name: sqranim1a;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+
+.sqr2:hover {
+    animation-name: sqranim1a;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+
+.sqr3:hover {
+    animation-name: sqranim1a;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+
+.sqr4:hover {
+    animation-name: sqranim1a;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+
+.sqr5:hover {
+    animation-name: sqranim1a;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes sqranim1a {
+    0% {
+        background-color: rgb(20, 13, 13);
+    }
+    100% {
+        background-color: rgba(20, 13, 13, 0)
+    }
+}
+
+@keyframes sqranim1b {
+    0% {
+        background-color: rgba(20, 13, 13, 0)
+    }
+    100% {
+        background-color: rgb(20, 13, 13);
+    }
+}
+
+/* */
+
 .vertical {
-    background: linear-gradient(49deg, rgba(255, 197, 38) 27%, rgb(255,237,51,1) 100%);
+    background: linear-gradient(49deg, rgba(255, 197, 38) 27%, rgb(255, 237, 51, 1) 100%);
     width: 7px;
     height: 75px;
     border-radius: 5px;
@@ -63,14 +160,18 @@ h1 {
     justify-content: left;
 }
 
-.line1, .line2, .line3, .line4 , .line5 {
+.line1,
+.line2,
+.line3,
+.line4,
+.line5 {
     display: inline-flex;
 }
 
 .line1 {
     height: 7px;
     width: 1000px;
-    background: linear-gradient(49deg, rgba(0,239,255,1) 90%, rgb(38, 255, 154) 100%);
+    background: linear-gradient(49deg, rgba(0, 239, 255, 1) 90%, rgb(38, 255, 154) 100%);
     border-radius: 5px;
     border-style: none;
     margin-right: 25px;
@@ -88,7 +189,7 @@ h1 {
 .line3 {
     height: 7px;
     width: 100px;
-    background: linear-gradient(49deg, rgb(38, 255, 128) 54%, rgba(255,237,51,1) 100%);
+    background: linear-gradient(49deg, rgb(38, 255, 128) 54%, rgba(255, 237, 51, 1) 100%);
     border-radius: 5px;
     border-style: none;
     margin-right: 45px;
@@ -97,7 +198,7 @@ h1 {
 .line4 {
     height: 7px;
     width: 400px;
-    background: linear-gradient(49deg, rgba(255,237,51,1) 87%, rgb(255, 197, 38) 100%);
+    background: linear-gradient(49deg, rgba(255, 237, 51, 1) 87%, rgb(255, 197, 38) 100%);
     border-radius: 5px;
     border-style: none;
     margin-right: 50px;
@@ -106,7 +207,11 @@ h1 {
 .line5 {
     height: 7px;
     width: 60px;
-    background: rgba(255,200,51,1);
+    background: rgba(255, 200, 51, 1);
     border-radius: 5px;
     border-style: none;
 }
+
+/* middle of the site */
+
+/* bottom of the site */
