--- a/style.css
+++ b/style.css
@@ -45,7 +45,11 @@ h1 {
     animation-fill-mode: forwards;
 }
 
-.sqr1, .sqr2, .sqr3, .sqr4, .sqr5 {
+.sqr1,
+.sqr2,
+.sqr3,
+.sqr4,
+.sqr5 {
     background-color: rgb(20, 13, 13);
     width: 67px;
     height: 67px;
@@ -132,6 +136,7 @@ p {
     0% {
         background-color: rgb(20, 13, 13);
     }
+
     100% {
         background-color: rgba(20, 13, 13, 0)
     }
@@ -141,6 +146,7 @@ p {
     0% {
         background-color: rgba(20, 13, 13, 0)
     }
+
     100% {
         background-color: rgb(20, 13, 13);
     }
@@ -156,6 +162,14 @@ p {
     border-style: none;
 }
 
+.accInfo {
+    width: 83px;
+    height: 83px;
+    margin-top: 5px;
+    margin-left: 18px;
+    background-color: aliceblue;
+}
+
 .horizontals {
     justify-content: left;
 }
@@ -164,7 +178,8 @@ p {
 .line2,
 .line3,
 .line4,
-.line5 {
+.line5,
+.line6 {
     display: inline-flex;
 }
 
@@ -212,6 +227,21 @@ p {
     border-style: none;
 }
 
+.line6 {
+    height: 7px;
+    width: 85px;
+    margin-left: 20px;
+    background: rgba(255, 200, 51, 1);
+    border-radius: 5px;
+    border-style: none;
+}
+
 /* middle of the site */
+
+/* login form */
+
+
+
+/*  */
 
 /* bottom of the site */
