--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ h1 {
 .top {
     display: inline-flex;
     height: 105px;
-    width: 1920px;
+    width: 1879px;
     background-color: rgb(24, 24, 24);
 }
 
@@ -53,6 +53,7 @@ h1 {
     border-radius: 3px;
     border: 1px solid;
     margin-left: 10px;
+    cursor: pointer;
 }
 
 .sqr1 {
@@ -214,6 +215,45 @@ h1 {
 }
 /* middle of the site */
 
+.modSearchBox {
+    display: flex;
+}
 
+.modList {
+    display: inline-block;
+    background-color: rgb(20, 13, 13);
+    height: 718px;
+    margin: 10px;
+    margin-top: 40px;
+    margin-left: 25px;
+    padding: 5px;
+    border-radius: 3px;
+    border: 1px solid aqua;
+    color: whitesmoke;
+    text-indent: 10px;
+    letter-spacing: 2px;
+}
+
+.modSearch {
+    height: 728px;
+    width: 800px;
+    margin: 10px;
+    margin-top: 40px;
+    display: inline-flex;
+    background-color: rgb(20, 13, 13);
+    border-radius: 3px;
+    border: 1px solid aqua;
+}
+
+.modSearchResult {
+    height: 728px;
+    width: 800px;
+    margin: 10px;
+    margin-top: 40px;
+    display: inline-flex;
+    background-color: rgb(20, 13, 13);
+    border-radius: 3px;
+    border: 1px solid aqua;
+}
 
 /* bottom of the site */
