--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ h1 {
 }
 /* middle of the site */
 
-.arcaneSearchBox {
+/* .arcaneSearchBox {
     display: flex;
 }
 
@@ -264,18 +264,21 @@ li {
     background-color: rgb(20, 13, 13);
     border-radius: 3px;
     border: 1px solid aqua;
+} */
+
+.login {
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+    height: 700px;
+    width: 800px;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(20, 13, 13);
+    border-radius: 10px;
 }
+
 
 /* bottom of the site */
-
-.footerMain {
-    width: 100vw;
-    height: 30vh;
-    background-color: rgb(24 24 24);
-}
-
-.footerLine {
-    height: 0.5vh;
-    background: linear-gradient(49deg, rgba(0, 239, 255, 1) 90%, rgb(38, 255, 154) 100%);
-    border-style: none;
-}
