--- a/2024/2024_06_02/styl.css
+++ b/2024/2024_06_02/styl.css
@@ -6,25 +6,29 @@ header {
     background-color: tomato;
     color: white;
     text-align: center;
-    width: 80%;
+    width: 100%;
     height: 80px;
+    float: left;
 }
 
 main {
     width: 80%;
     height: 600px;
+    float: left;
 }
 
 #boczny {
     background-color: coral;
     width: 20%;
-    height: 680px;
+    height: 680px; 
+    float: left;
 }
 
 footer {
     background-color: tomato;
     color: white;
     text-align: center;
+    clear: both;
 }
 
 img {
@@ -35,7 +39,7 @@ img {
 
 #chat {
     border: 1px solid tomato;
-    margin: 15px;
+    padding: 15px;
     height: 470px;
     overflow: scroll;   
 }
